--- a/.env.template
+++ b/.env.template
@@ -2,4 +2,5 @@ OPENAI_API_KEY="sk-..."
 ANTHROPIC_API_KEY="sk-ent-..."
 GOOGLE_API_KEY="AIza..."
 LANGSMITH_API_KEY="..."
-LANGSMITH_API_KEY="..."
+LANGSMITH_TRACKING_V2="true"
+LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
